syntax = "proto3";

option csharp_namespace = "GrpcService1";

import "google/protobuf/empty.proto";

package greet;

service Greeter {
    rpc ActionStream (stream Coordinates) returns (stream Coordinates);
	rpc SendRole (RoleMessage) returns (google.protobuf.Empty);
	rpc GetRole (google.protobuf.Empty) returns (RoleMessage);
}

message Coordinates {
	double XPosition = 1;
	double YPosition = 2;
}

message RoleMessage {
	bool Role = 1;
}